--- a/pom.xml
+++ b/pom.xml
@@ -22,16 +22,13 @@
     </build>
     <packaging>war</packaging>
 
-    <properties>
-        <springframework.version>4.0.6.RELEASE</springframework.version>
-    </properties>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>${springframework.version}</version>
+            <version>4.0.6.RELEASE</version>
         </dependency>
 
     </dependencies>
